--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
     build:
       context: .
       target: final
-    ports:
-      - 58008:58008
     environment:
       DB_DIR: prod-data
+      ENV: prod
     volumes:
      - ./prod-data:/dbot/prod-data
 
