--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,8 +2,10 @@ version: "2"
 sql:
   - schema: "sql/db-schema.sql"
     queries: "sql/db-query.sql"
+    engine: "sqlite"
     gen:
       go:
+        package: "store"
         out: "pkg/store"
         overrides:
           - db_type: "Aliases"
